code/project_iframes/iframe.css
:root {
    --mid-lilac: #8566a3;
    --light-lilac: #f0e1ff;
    --mint: #a9d3d0;
    --i: 0;
} /* there is probably a way to set these in java instead of copying them into each css file but I don't have time to do that right now*/ 


body{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    margin: 0%;
    box-sizing: border-box;
    width: 100%;
    padding-top: 10%;

}

h2{
    padding: 5%;
    margin: 0;
    font-size: 20pt;
    color: white;
    font-family: 'Bahnschrift Condensed', 'Copperplate', Helvetica, sans-serif;
}

p{
    padding: 0;
    margin: 0;
    font-size: medium;
}

.project{
    border: 1px solid white;
    font-size: 30px;
    text-align: center;
    width: fit-content;
    min-height: 200px; /*stop firefox from breaking page*/
    height: 200px;
    overflow-y: hidden;
    display: block;
    margin-right: 100px;
    box-sizing: border-box;

}

.project a{
    display: block;
    width: 100%;
    height: 100%;
    text-decoration: none;
    color: inherit;
}

.content{
    height: fit-content;
    display: block;
    padding: 0%;
    transform: translateY(var(--i));
    transition: transform .5s ease-out;
}

.title{
    /*padding: 0;*/
    margin: 0;
    width: 200px;
    height: 200px !important;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--mid-lilac);
    
}

.description{
    padding: 0;
    margin: 0;
    width: 200px;
    height: 200px !important;
    display: flex;
    justify-content: center;
    align-items: center;
    color: black; /* Text color */
    background-color: var(--mint);
}

